Add small footer

--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,10 @@
 				<input type="submit" value="Submit!" />
 			</form>
 			<div id="gifts"></div>
+
+			<div id="footer">
+				<p>Made with ❤️ by @xvcf</p>
+			</div>
 		</div>
 	</body>
 </html>
