Add error display

--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,7 @@
 				<br />
 				<input type="submit" value="Submit!" />
 			</form>
+			<span id="error"></span>
 			<div id="gifts"></div>
 
 			<div id="footer">
